--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
                   <a class="nav-link smooth-transitions" onclick="scrollToSection('#sponsors')">SPONSORS</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link smooth-transitions" href="http://" target="_blank" rel="noopener noreferrer">APPLY</a>
+                  <a class="nav-link smooth-transitions" style="padding-right: 0" href="http://" target="_blank" rel="noopener noreferrer">APPLY</a>
                 </li>
               </ul>
             </div>
           </nav>
-          <div class="row">
+          <div id="header-container" class="row">
             <div id="header"><b>GreatUniHack 2018</b></div>
           </div>
           <div class="row">
@@ -144,65 +144,61 @@
             <div class="col-md-4 question-card-container">
               <div class="question-card smooth-transitions">
                 <div class="question-title">HOW MUCH DOES IT COST?</div>
-                <div class="question-answer">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae
-                  perferendis
-                  molestias assumenda soluta repudiandae veritatis ullam ad odio numquam voluptatibus.</div>
+                <div class="question-answer">GreatUniHack is free for all accepted hackers. We will provide you WiFi,
+                  meals, swag, workshops and…..FUN!</div>
               </div>
             </div>
             <div class="col-md-4 question-card-container">
               <div class="question-card smooth-transitions">
-                <div class="question-title">LOREM IPSUM DOLOR SIT AMET</div>
-                <div class="question-answer">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae
-                  perferendis
-                  molestias assumenda soluta repudiandae veritatis ullam ad odio numquam voluptatibus.</div>
+                <div class="question-title">WHAT IF I DON'T HAVE A TEAM?</div>
+                <div class="question-answer">No need to worry! Part of the fun of a hackathon is meeting new people. We
+                  will have time at the beginning of the event for everyone to meet and form teams.</div>
               </div>
             </div>
             <div class="col-md-4 question-card-container">
               <div class="question-card smooth-transitions">
-                <div class="question-title">LOREM IPSUM DOLOR SIT AMET</div>
-                <div class="question-answer">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae
-                  perferendis
-                  molestias assumenda soluta repudiandae veritatis ullam ad odio numquam voluptatibus.</div>
+                <div class="question-title">WHAT SHOULD I BRING?</div>
+                <div class="question-answer">All attendees must bring a valid ID for admission. Other common checklist
+                  items include: laptops, chargers, sleeping bags and toiletries.</div>
               </div>
             </div>
             <div class="col-md-4 question-card-container">
               <div class="question-card smooth-transitions">
-                <div class="question-title">LOREM IPSUM DOLOR SIT AMET</div>
-                <div class="question-answer">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae
-                  perferendis
-                  molestias assumenda soluta repudiandae veritatis ullam ad odio numquam voluptatibus.</div>
+                <div class="question-title">WHAT IF I AM NOT A STUDENT?</div>
+                <div class="question-answer">We accept students up to 1 year after graduation. You can also join us as
+                  a mentor! Contact us for more info.</div>
               </div>
             </div>
             <div class="col-md-4 question-card-container">
               <div class="question-card smooth-transitions">
-                <div class="question-title">LOREM IPSUM DOLOR SIT AMET</div>
-                <div class="question-answer">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae
-                  perferendis
-                  molestias assumenda soluta repudiandae veritatis ullam ad odio numquam voluptatibus.</div>
+                <div class="question-title">DO YOU HAVE A CODE OF CONDUCT?</div>
+                <div class="question-answer">Yes. Smile, be nice and have fun, but all the other details can be found
+                  here:
+                  <LINK>
+                </div>
               </div>
             </div>
             <div class="col-md-4 question-card-container">
               <div class="question-card smooth-transitions">
-                <div class="question-title">LOREM IPSUM DOLOR SIT AMET</div>
-                <div class="question-answer">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae
-                  perferendis
-                  molestias assumenda soluta repudiandae veritatis ullam ad odio numquam voluptatibus.</div>
+                <div class="question-title">I DON'T KNOW HOW TO CODE. CAN I STILL COME?</div>
+                <div class="question-answer">Hackathons are for beginners. Networking with and seeing awesome hackers
+                  in action will expose you to a tremendous amount of knowledge. There is an amazing suit of industry
+                  experts and mentors that are happy to assist you!</div>
               </div>
             </div>
             <div class="col-md-4 question-card-container">
               <div class="question-card smooth-transitions">
-                <div class="question-title">LOREM IPSUM DOLOR SIT AMET</div>
-                <div class="question-answer">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae
-                  perferendis
-                  molestias assumenda soluta repudiandae veritatis ullam ad odio numquam voluptatibus.</div>
+                <div class="question-title">WHAT CAN I EXPECT FROM GREATUNIHACK?</div>
+                <div class="question-answer">An entire weekend of great company, good food and plenty of swag! We’ll
+                  also have hardware and tons of mentors.</div>
               </div>
             </div>
             <div class="col-md-4 question-card-container">
               <div class="question-card smooth-transitions">
-                <div class="question-title">LOREM IPSUM DOLOR SIT AMET</div>
-                <div class="question-answer">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae
-                  perferendis
-                  molestias assumenda soluta repudiandae veritatis ullam ad odio numquam voluptatibus.</div>
+                <div class="question-title">WHO OWNS MY IP RIGHTS, CODE AND IDEA?</div>
+                <div class="question-answer">You own all the rights to your intellectual property. We won’t claim any
+                  right over anything made during this event.
+                </div>
               </div>
             </div>
           </div>
