--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                   <a class="nav-link smooth-transitions" onclick="scrollToSection('#sponsors')">SPONSORS</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link smooth-transitions" style="padding-right: 0" href="http://" target="_blank" rel="noopener noreferrer">APPLY</a>
+                  <a class="nav-link smooth-transitions" style="padding-right: 0" href="http://apply.greatunihack.com/" target="_blank" rel="noopener noreferrer">APPLY</a>
                 </li>
               </ul>
             </div>
@@ -119,7 +119,7 @@
       </div>
       <div class="col-12">
         <div id="apply-button" class="row">
-          <a class="button-white smooth-transitions" href="http://" target="_blank" rel="noopener noreferrer">
+          <a class="button-white smooth-transitions" href="http://apply.greatunihack.com/" target="_blank" rel="noopener noreferrer">
             Apply Now
           </a>
         </div>
