--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
             <div id="header"><b>GreatUniHack 2018</b></div>
           </div>
           <div class="row">
-            <div id="header-subscript">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi hic corrupti
-              officia voluptate ipsam, dolor ipsa quo earum nobis obcaecati.</div>
+            <div id="header-subscript">Having fun in a smart way, are you ready for this November? We are.</div>
           </div>
         </div>
       </div>
