--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 develop innovative ideas in a competitive environment. This year's edition aims to introduce a new
                 generation of developers with great potential for improving the technology industry and community.</p>
             </div>
-            <div class="col-md-6">
+            <div id="about-us-img-container" class="col-md-6">
               <img id="about-us-img" src="static/images/aboutUsImg.jpg" alt="Team">
             </div>
           </div>
@@ -296,7 +296,7 @@
               </div>
             </div>
           </div>
-          <div class="sponsors-tier">
+          <!-- <div class="sponsors-tier">
             <div class="row">
               <h3>gold sponsor</h3>
             </div>
@@ -309,7 +309,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="sponsors-tier">
             <div class="row">
               <h3>silver sponsors</h3>
@@ -330,7 +330,7 @@
                   </a>
                 </div>
               </div>
-              <div class="col-sm-3">
+              <!-- <div class="col-sm-3">
                 <div class="row justify-content-center">
                   <a href="https://www.skyscanner.net" target="_blank" rel="noopener noreferrer">
                     <img id="skyscanner-logo" src="static/images/sponsors/skyscanner.png" alt="Skyscanner" class="sponsor-image silver">
@@ -343,7 +343,7 @@
                     <img id="visa-logo" src="static/images/sponsors/visa.png" alt="Visa" class="sponsor-image silver">
                   </a>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="sponsors-tier">
@@ -375,7 +375,7 @@
               <div class="col-sm-3">
                 <div class="row justify-content-center">
                   <a href="https://www.pushdoctor.co.uk" target="_blank" rel="noopener noreferrer" class="sponsor-image-container">
-                    <img src="static/images/sponsors/pushDoctor.webp" alt="Push Doctor" class="sponsor-image bronze">
+                    <img src="static/images/sponsors/pushDoctor.png" alt="Push Doctor" class="sponsor-image bronze">
                   </a>
                 </div>
               </div>
