--- a/index.html
+++ b/index.html
@@ -192,8 +192,9 @@
               <div class="question-card smooth-transitions">
                 <div class="question-title">DO YOU HAVE A CODE OF CONDUCT?</div>
                 <div class="question-answer">Yes. Smile, be nice and have fun, but all the other details can be found
-                  here:
-                  <LINK>
+                  <a href="https://drive.google.com/open?id=1w97ARjs2b7pc4sEHzfP6VNXafUIsQhj3" target="_blank" rel="noopener noreferrer">
+                    here.
+                  </a>
                 </div>
               </div>
             </div>
