--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="apple-touch-icon" sizes="144x144" href="/favicons/apple-icon-144x144.png">
   <link rel="apple-touch-icon" sizes="152x152" href="/favicons/apple-icon-152x152.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="/favicons/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/favicons/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="/favicons/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
@@ -75,7 +75,8 @@
                   <a class="nav-link smooth-transitions" onclick="scrollToSection('#sponsors')">SPONSORS</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link smooth-transitions" style="padding-right: 0" href="http://apply.greatunihack.com/" target="_blank" rel="noopener noreferrer">APPLY</a>
+                  <a class="nav-link smooth-transitions" style="padding-right: 0" href="http://apply.greatunihack.com/"
+                    target="_blank" rel="noopener noreferrer">APPLY</a>
                 </li>
               </ul>
             </div>
@@ -183,8 +184,9 @@
             </div>
             <div class="col-md-4 question-card-container">
               <div class="question-card smooth-transitions">
-                <div class="question-title">WHAT IF I AM NOT A STUDENT?</div>
-                <div class="question-answer">We accept students up to 1 year after graduation. You can also join us as
+                <div class="question-title">WHO CAN APPLY?</div>
+                <div class="question-answer">We accept students who are over 18 and are currently studying or have
+                  graduated less than 1 year ago. You can also join us as
                   a mentor! Contact us for more info.</div>
               </div>
             </div>
