Add new sponsors

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div id="about-us-content" class="col-md-6 align-contents-vertical">
               <h1>about us</h1>
               <p>We are GreatUniHack, an annual 24-hour student-oriented hackathon organised by the University of
-                Manchester tech society, HackSoc.</p>
+                Manchester tech society, HackSoc in collaboration with CSSoc.</p>
               <p>Established in 2014, we have brought together students from 88 universities across Europe to work and
                 develop innovative ideas in a competitive environment. This year's edition aims to introduce a new
                 generation of developers with great potential for improving the technology industry and community.</p>
@@ -299,7 +299,7 @@
               </div>
             </div>
           </div>
-          <!-- <div class="sponsors-tier">
+          <div class="sponsors-tier">
             <div class="row">
               <h3>gold sponsor</h3>
             </div>
@@ -312,7 +312,7 @@
                 </div>
               </div>
             </div>
-          </div> -->
+          </div>
           <div class="sponsors-tier">
             <div class="row">
               <h3>silver sponsors</h3>
@@ -339,14 +339,14 @@
                     <img id="skyscanner-logo" src="static/images/sponsors/skyscanner.png" alt="Skyscanner" class="sponsor-image silver">
                   </a>
                 </div>
-              </div>
+              </div> -->
               <div class="col-sm-3">
                 <div class="row justify-content-center">
                   <a href="https://www.visa.co.uk/" target="_blank" rel="noopener noreferrer">
                     <img id="visa-logo" src="static/images/sponsors/visa.png" alt="Visa" class="sponsor-image silver">
                   </a>
                 </div>
-              </div> -->
+              </div>
             </div>
           </div>
           <div class="sponsors-tier">
@@ -357,7 +357,14 @@
               <div class="col-sm-3">
                 <div class="row justify-content-center">
                   <a href="https://www.codethink.co.uk/" target="_blank" rel="noopener noreferrer" class="sponsor-image-container">
-                    <img src="static/images/sponsors/codethink.png" alt="Codethink" class="sponsor-image bronze">
+                    <img id="codethink-logo" src="static/images/sponsors/codethink.png" alt="Codethink" class="sponsor-image bronze">
+                  </a>
+                </div>
+              </div>
+              <div class="col-sm-3">
+                <div class="row justify-content-center">
+                  <a href="https://www.goldmansachs.com" target="_blank" rel="noopener noreferrer">
+                    <img id="goldman-sachs-logo" src="static/images/sponsors/goldmanSachs.png" alt="Goldman Sachs" class="sponsor-image bronze">
                   </a>
                 </div>
               </div>
@@ -365,6 +372,13 @@
                 <div class="row justify-content-center">
                   <a href="https://www.netcraft.com/" target="_blank" rel="noopener noreferrer">
                     <img id="netcraft-logo" src="static/images/sponsors/netcraft.png" alt="Netcraft" class="sponsor-image bronze">
+                  </a>
+                </div>
+              </div>
+              <div class="col-sm-3">
+                <div class="row justify-content-center">
+                  <a href="https://www.thg.com/" target="_blank" rel="noopener noreferrer">
+                    <img id="thg-logo" src="static/images/sponsors/thg.png" alt="The Hut Group" class="sponsor-image bronze">
                   </a>
                 </div>
               </div>
