Add missing intel and AWS as sponsors

--- a/index.html
+++ b/index.html
@@ -333,13 +333,13 @@
                   </a>
                 </div>
               </div>
-              <!-- <div class="col-sm-3">
+              <div class="col-sm-3">
                 <div class="row justify-content-center">
                   <a href="https://www.skyscanner.net" target="_blank" rel="noopener noreferrer">
                     <img id="skyscanner-logo" src="static/images/sponsors/skyscanner.png" alt="Skyscanner" class="sponsor-image silver">
                   </a>
                 </div>
-              </div> -->
+              </div>
               <div class="col-sm-3">
                 <div class="row justify-content-center">
                   <a href="https://www.visa.co.uk/" target="_blank" rel="noopener noreferrer">
@@ -392,8 +392,42 @@
               <div class="col-sm-3">
                 <div class="row justify-content-center">
                   <a href="https://www.pushdoctor.co.uk" target="_blank" rel="noopener noreferrer" class="sponsor-image-container">
-                    <img src="static/images/sponsors/pushDoctor.png" alt="Push Doctor" class="sponsor-image bronze">
+                    <img id="push-doctor-logo" src="static/images/sponsors/pushDoctor.png" alt="Push Doctor" class="sponsor-image bronze">
                   </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="sponsors-tier">
+                <div class="row">
+                  <h3>hardware sponsor</h3>
+                </div>
+                <div class="row sponsor-row">
+                  <div class="col-sm-3">
+                    <div class="row justify-content-center">
+                      <a href="https://www.intel.co.uk" target="_blank" rel="noopener noreferrer" class="sponsor-image-container">
+                        <img id="intel-logo" src="static/images/sponsors/intel.png" alt="Intel" class="sponsor-image bronze">
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="sponsors-tier">
+                <div class="row">
+                  <h3>cloud sponsor</h3>
+                </div>
+                <div class="row sponsor-row">
+                  <div class="col-sm-3">
+                    <div class="row justify-content-center">
+                      <a href="https://aws.amazon.com/education/awseducate/" target="_blank" rel="noopener noreferrer" class="sponsor-image-container">
+                        <img id="aws-logo" src="static/images/sponsors/aws.png" alt="AWS Educate" class="sponsor-image bronze">
+                      </a>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
