Add Barclays to sponsors

--- a/index.html
+++ b/index.html
@@ -327,12 +327,22 @@
               </div>
               <div class="col-sm-3">
                 <div class="row justify-content-center">
+                  <a href="https://www.barclays.co.uk/" target="_blank" rel="noopener noreferrer">
+                    <img id="barclays-logo" src="static/images/sponsors/barclays.png" alt="Barclays"
+                      class="sponsor-image silver">
+                  </a>
+                </div>
+              </div>
+              <div class="col-sm-3">
+                <div class="row justify-content-center">
                   <a href="https://www.morganstanley.com/" target="_blank" rel="noopener noreferrer">
                     <img id="morgan-stanley-logo" src="static/images/sponsors/morganStanley.png" alt="Morgan Stanley"
                       class="sponsor-image silver">
                   </a>
                 </div>
               </div>
+            </div>
+            <div class="row sponsor-row">
               <div class="col-sm-3">
                 <div class="row justify-content-center">
                   <a href="https://www.skyscanner.net" target="_blank" rel="noopener noreferrer">
@@ -364,7 +374,8 @@
               <div class="col-sm-3">
                 <div class="row justify-content-center">
                   <a href="https://www.goldmansachs.com" target="_blank" rel="noopener noreferrer">
-                    <img id="goldman-sachs-logo" src="static/images/sponsors/goldmanSachs.png" alt="Goldman Sachs" class="sponsor-image bronze">
+                    <img id="goldman-sachs-logo" src="static/images/sponsors/goldmanSachs.png" alt="Goldman Sachs"
+                      class="sponsor-image bronze">
                   </a>
                 </div>
               </div>
@@ -416,7 +427,8 @@
                 <div class="row sponsor-row">
                   <div class="col-sm-3">
                     <div class="row justify-content-center">
-                      <a href="https://aws.amazon.com/education/awseducate/" target="_blank" rel="noopener noreferrer" class="sponsor-image-container">
+                      <a href="https://aws.amazon.com/education/awseducate/" target="_blank" rel="noopener noreferrer"
+                        class="sponsor-image-container">
                         <img id="aws-logo" src="static/images/sponsors/aws.png" alt="AWS Educate" class="sponsor-image bronze">
                       </a>
                     </div>
