Add bentley as sponsors

--- a/index.html
+++ b/index.html
@@ -366,6 +366,13 @@
             <div class="row sponsor-row">
               <div class="col-sm-3">
                 <div class="row justify-content-center">
+                  <a href="https://www.bentleymotors.com/" target="_blank" rel="noopener noreferrer" class="sponsor-image-container">
+                    <img id="bentley-logo" src="static/images/sponsors/bentley.png" alt="Bentley" class="sponsor-image bronze">
+                  </a>
+                </div>
+              </div>
+              <div class="col-sm-3">
+                <div class="row justify-content-center">
                   <a href="https://www.codethink.co.uk/" target="_blank" rel="noopener noreferrer" class="sponsor-image-container">
                     <img id="codethink-logo" src="static/images/sponsors/codethink.png" alt="Codethink" class="sponsor-image bronze">
                   </a>
