Add AZ as headline sponsor

--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@
           <div class="row">
             <div id="header-subscript">Having fun in a smart way, are you ready for this November? We are.</div>
           </div>
+          <div class="row buffer-top-20">
+            <div id="headline-sponsor">
+              powered by:
+            </div>
+            <img id="headline-sponsor-logo" src="/static/images/sponsors/astraZeneca_white.png" alt="AstraZeneca">
+          </div>
         </div>
       </div>
     </div>
@@ -328,8 +334,7 @@
               <div class="col-sm-3">
                 <div class="row justify-content-center">
                   <a href="https://www.barclays.co.uk/" target="_blank" rel="noopener noreferrer">
-                    <img id="barclays-logo" src="static/images/sponsors/barclays.png" alt="Barclays"
-                      class="sponsor-image silver">
+                    <img id="barclays-logo" src="static/images/sponsors/barclays.png" alt="Barclays" class="sponsor-image silver">
                   </a>
                 </div>
               </div>
