Add Daktrai Mkononi as an NGO partner

--- a/index.html
+++ b/index.html
@@ -438,6 +438,20 @@
               </div>
             </div>
           </div>
+          <div class="sponsors-tier">
+            <div class="row">
+              <h3>NGO partners</h3>
+            </div>
+            <div class="row sponsor-row">
+              <div class="col-sm-3">
+                <div class="row justify-content-center">
+                  <a href="https://daktarimkononi.com/" target="_blank" rel="noopener noreferrer" class="sponsor-image-container">
+                    <img id="daktarimkononi-logo" src="static/images/sponsors/daktariMkonomi.png" alt="Daktari Mkononi" class="sponsor-image bronze">
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
