--- a/index.html
+++ b/index.html
@@ -450,6 +450,20 @@
                   </a>
                 </div>
               </div>
+              <div class="col-sm-3">
+                <div class="row justify-content-center">
+                  <a href="https://www.facebook.com/MakeITeducational/" target="_blank" rel="noopener noreferrer" class="sponsor-image-container">
+                    <img id="makeit-logo" src="static/images/sponsors/makeIt.png" alt="MakeIt" class="sponsor-image bronze">
+                  </a>
+                </div>
+              </div>
+              <div class="col-sm-3">
+                <div class="row justify-content-center">
+                  <a href="https://romanianit.com/" target="_blank" rel="noopener noreferrer" class="sponsor-image-container">
+                    <img id="romanianit-logo" src="static/images/sponsors/romanianIt.png" alt="RomanianIt" class="sponsor-image bronze">
+                  </a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
