--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   <link rel="stylesheet" href="static/css/faq.css">
   <link rel="stylesheet" href="static/css/gallery.css">
   <link rel="stylesheet" href="static/css/sponsors.css">
+  <link rel="stylesheet" href="static/css/schedule.css">
 </head>
 
 <body>
@@ -217,6 +218,105 @@
                   right over anything made during this event.
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="schedule">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-11">
+          <div class="row">
+            <h1>the schedule</h1>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="row schedule-day">Saturday</div>
+              <ul class="schedule-item-list">
+                <li class="schedule-item">
+                  <span class="schedule-time">09:30</span>
+                  <span class="schedule-title">Registration Opens</span>
+                </li>
+                <li class="schedule-item">
+                  <span class="schedule-time">09:30</span>
+                  <span class="schedule-title">Breakfast (Continental)</span>
+                </li>
+                <li class="schedule-item">
+                  <span class="schedule-time">11:00</span>
+                  <span class="schedule-title">Opening Ceremony</span>
+                </li>
+                <li class="schedule-item bold">
+                  <span class="schedule-time">12:00</span>
+                  <span class="schedule-title">Hacking Starts</span>
+                </li>
+                <li class="schedule-item">
+                  <span class="schedule-time">12:00</span>
+                  <span class="schedule-title">Team Building</span>
+                </li>
+                <li class="schedule-item">
+                  <span class="schedule-time">12:00</span>
+                  <span class="schedule-title">Lunch (MMU Catered)</span>
+                </li>
+                <li class="schedule-item">
+                  <span class="schedule-time">14:00</span>
+                  <span class="schedule-title">AstraZeneca Workshop</span>
+                </li>
+                <li class="schedule-item">
+                  <span class="schedule-time">15:00</span>
+                  <span class="schedule-title">Cisco Workshop</span>
+                </li>
+                <li class="schedule-item">
+                  <span class="schedule-time">16:00</span>
+                  <span class="schedule-title">Skyscanner Workshop</span>
+                </li>
+                <li class="schedule-item">
+                  <span class="schedule-time">17:00</span>
+                  <span class="schedule-title">GitHub Workshop</span>
+                </li>
+                <li class="schedule-item">
+                  <span class="schedule-time">18:00</span>
+                  <span class="schedule-title">Dinner (Chinese)</span>
+                </li>
+              </ul>
+            </div>
+            <div class="col-md-6">
+              <div class="row schedule-day">Sunday</div>
+              <ul class="schedule-item-list">
+                <li class="schedule-item">
+                  <span class="schedule-time">00:00</span>
+                  <span class="schedule-title">Midnight Pizza</span>
+                </li>
+                <li class="schedule-item">
+                  <span class="schedule-time">08:00</span>
+                  <span class="schedule-title">Breakfast (Continental)</span>
+                </li>
+                <li class="schedule-item">
+                  <span class="schedule-time">10:00</span>
+                  <span class="schedule-title">Hack Submissions Open</span>
+                </li>
+                <li class="schedule-item bold">
+                  <span class="schedule-time">12:00</span>
+                  <span class="schedule-title">Hacking Stops</span>
+                </li>
+                <li class="schedule-item">
+                  <span class="schedule-time">12:00</span>
+                  <span class="schedule-title">Lunch (Subway)</span>
+                </li>
+                <li class="schedule-item">
+                  <span class="schedule-time">13:00</span>
+                  <span class="schedule-title">Demos</span>
+                </li>
+                <li class="schedule-item">
+                  <span class="schedule-time">14:30</span>
+                  <span class="schedule-title">Presentations</span>
+                </li>
+                <li class="schedule-item">
+                  <span class="schedule-time">15:30</span>
+                  <span class="schedule-title">Closing Ceremony</span>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
@@ -446,7 +546,8 @@
               <div class="col-sm-3">
                 <div class="row justify-content-center">
                   <a href="https://daktarimkononi.com/" target="_blank" rel="noopener noreferrer" class="sponsor-image-container">
-                    <img id="daktarimkononi-logo" src="static/images/sponsors/daktariMkonomi.png" alt="Daktari Mkononi" class="sponsor-image bronze">
+                    <img id="daktarimkononi-logo" src="static/images/sponsors/daktariMkonomi.png" alt="Daktari Mkononi"
+                      class="sponsor-image bronze">
                   </a>
                 </div>
               </div>
