--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   <link rel="stylesheet" href="static/css/gallery.css">
   <link rel="stylesheet" href="static/css/sponsors.css">
   <link rel="stylesheet" href="static/css/schedule.css">
+  <link rel="stylesheet" href="static/css/venue.css">
 </head>
 
 <body>
@@ -68,6 +69,9 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link smooth-transitions" onclick="scrollToSection('#faq')">FAQ</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link smooth-transitions" onclick="scrollToSection('#venue')">EVENT INFO</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link smooth-transitions" onclick="scrollToSection('#gallery')">LAST YEAR</a>
@@ -217,6 +221,31 @@
                 <div class="question-answer">You own all the rights to your intellectual property. We won’t claim any
                   right over anything made during this event.
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="venue">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-11">
+          <div class="row">
+            <h1>the venue</h1>
+            <div class="row">
+              <div class="col-md-6 align-contents-vertical">
+                <p class="margins-0"><b>Manchester Metropolitan University Business School</b></p>
+                <p class="margins-0">
+                    All Saints, All Saints Campus, Manchester M15 6BH
+                </p>
+                <a href="https://www.google.co.uk/maps/place/The+Business+School/@53.4706851,-2.2417205,17z/data=!4m12!1m6!3m5!1s0x487bb1be49ec27dd:0x236f941c8f2d5bba!2sManchester+Metropolitan+University+Business+School!8m2!3d53.4709725!4d-2.23899!3m4!1s0x0:0xc771a6a3c340c90d!8m2!3d53.4703514!4d-2.2403989" target="_blank" rel="noopener noreferrer">
+                  Find it here!
+                </a>
+              </div>
+              <div class="col-md-6">
+                <img id="venue-image" src="static/images/venueImage.jpg" alt="">
               </div>
             </div>
           </div>
